--- a/css/main.css
+++ b/css/main.css
@@ -11,4 +11,6 @@ html, body {
 }
 html{
     background-image: url("../src/img/background.png");
+    background-repeat: no-repeat;
+    background-size:100% 100%;
 }
