--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,9 @@ html, body {
     user-select: none;
 }
 html{
+    background-color: #c00100;
     background-image: url("../src/img/background.png");
     background-repeat: no-repeat;
-    background-size:100% 100%;
+    background-position: center;
+    background-size: auto 100%;
 }
