--- a/css/main.css
+++ b/css/main.css
@@ -9,10 +9,6 @@ html, body {
 }
 html{
     background-color: #c00100;
-    background-image: url("../src/img/background.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: auto 100%;
 }
 body {
     -webkit-text-size-adjust: 100% !important;
@@ -22,4 +18,87 @@ body {
     overflow: hidden;
     display: block;
     margin: 0;
+}
+#cover{
+    width: 100%;
+    height: 100%;
+    background-image: url("../src/img/background.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: auto 100%;
+}
+#cover-part1{
+    /* background-color: #dfc6c6; */
+    width: 25%;
+    height: 100%;
+    position: absolute;
+}
+#cover-part2{
+    /* background-color: #0e973c; */
+    width: 50%;
+    height: 100%;
+    position: absolute;
+    left: 25%;
+}
+#cover-part3{
+    /* background-color: #0013c0; */
+    width: 25%;
+    height: 100%;
+    position: absolute;
+    right: 0%;
+}
+.cover-indent{
+    position: absolute;
+    top: 9%;
+    width: 100%;
+    height: 41%;
+}
+#tittle-img{
+    width: 100%;
+    height: 41%;
+    background-image: url("../src/img/tittle.png");
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+}
+#tittle-label-img{
+    width: 62%;
+    height: 15%;
+    background-image: url("../src/img/label.png");
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+    position: absolute;
+    right: 0;
+}
+.tittle-part3-left-indent{
+    position: absolute;
+    left: 36%;
+}
+#tittle-bar-img{
+    background-color: #fff;
+    width: 0.1rem;
+    height: 100%;
+}
+#tittle-text-img{
+    width: 100%;
+    height: 50%;
+    position: absolute;
+    top: 52%;
+}
+#tittle-text-img1{
+    background-image: url("../src/img/zddw.png");
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+    width: 27.7%;
+    height: 30%;
+    position: absolute;
+    top: 22.4%;
+}
+#tittle-text-img2{
+    background-image: url("../src/img/zbdw.png");
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+    width: 27.7%;
+    height: 27.5%;
+    position: absolute;
+    bottom: 14.3%;
 }
