--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ html, body {
     overflow: auto;
 }
 html{
-    background-color: #c00100;
+    background-color: #a40501;
 }
 body {
     -webkit-text-size-adjust: 100% !important;
@@ -20,6 +20,7 @@ body {
     margin: 0;
 }
 #cover{
+    position: absolute;
     width: 100%;
     height: 100%;
     background-image: url("../src/img/background.png");
