--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,8 @@ body {
     display: block;
     margin: 0;
 }
+
+/* 封面各元素属性 */
 #cover{
     position: absolute;
     width: 100%;
@@ -28,49 +30,20 @@ body {
     background-position: center;
     background-size: auto 100%;
 }
-#cover-part1{
-    /* background-color: #dfc6c6; */
-    width: 25%;
-    height: 100%;
-    position: absolute;
-}
-#cover-part2{
-    /* background-color: #0e973c; */
-    width: 50%;
-    height: 100%;
-    position: absolute;
-    left: 25%;
-}
-#cover-part3{
-    /* background-color: #0013c0; */
-    width: 25%;
-    height: 100%;
-    position: absolute;
-    right: 0%;
-}
 .cover-indent{
     position: absolute;
     top: 9%;
     width: 100%;
     height: 41%;
 }
-#tittle-img{
-    width: 100%;
-    background-image: url("../src/img/tittle.png");
-    background-repeat: no-repeat;
-    background-size: auto 100%;
-    background-position: center;
-}
-#tittle-label-img{
-    width: 62%;
-    height: 49%;
-    background-image: url("../src/img/label.png");
-    background-repeat: no-repeat;
-    background-size: 100% auto;
+/* 第一部分（左侧） */
+#cover-part1{
+    /* background-color: #dfc6c6; */
+    width: 25%;
+    height: 100%;
     position: absolute;
-    right: 0;
 }
-.tittle-part3-left-indent{
+.tittle-part1-left-indent{
     position: absolute;
     left: 36%;
 }
@@ -103,6 +76,46 @@ body {
     position: absolute;
     bottom: 14.3%;
 }
+/* 第一部分 结束 */
+
+/* 第二部分（中间） */
+#cover-part2{
+    /* background-color: #0e973c; */
+    width: 50%;
+    height: 100%;
+    position: absolute;
+    left: 25%;
+}
+#tittle-img{
+    width: 100%;
+    background-image: url("../src/img/tittle.png");
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+    background-position: center;
+}
+/* 第二部分 结束 */
+
+/* 第三部分（右侧） */
+#cover-part3{
+    /* background-color: #0013c0; */
+    width: 25%;
+    height: 100%;
+    position: absolute;
+    right: 0%;
+}
+#tittle-label-img{
+    width: 62%;
+    height: 49%;
+    background-image: url("../src/img/label.png");
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+    position: absolute;
+    right: 0;
+}
+/* 第三部分 结束 */
+/* 封面各元素属性  结束*/
+
+/* next-icon属性与动画 */
 .next-ico-border{
     width: 20%;
     height: 16%;
@@ -141,3 +154,4 @@ body {
     80% {transform:rotate(55deg) skew(20deg) translateY(80%) translateX(80%);opacity: 1;}
     100% {transform:rotate(55deg) skew(20deg) translateY(80%) translateX(80%);opacity: 0;}
 }
+/* next-icon属性与动画  结束 */
