--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,7 @@ body {
 #tittle-text-img1{
     background-image: url("../src/img/zddw.png");
     background-repeat: no-repeat;
-    background-size: auto 100%;
+    background-size: contain;
     width: 27.7%;
     height: 30%;
     position: absolute;
@@ -70,7 +70,7 @@ body {
 #tittle-text-img2{
     background-image: url("../src/img/zbdw.png");
     background-repeat: no-repeat;
-    background-size: auto 100%;
+    background-size: contain;
     width: 27.7%;
     height: 27.5%;
     position: absolute;
@@ -87,11 +87,94 @@ body {
     left: 25%;
 }
 #tittle-img{
-    width: 100%;
     background-image: url("../src/img/tittle.png");
     background-repeat: no-repeat;
-    background-size: auto 100%;
-    background-position: center;
+    background-size: contain;
+    background-position: left top;
+}
+/* next-icon属性与动画 */
+.next-ico-unity{
+    z-index: 100;
+    width: 20%;
+    border-radius: 20rem;
+    border-style:solid;
+    border-color: aliceblue;
+    border-width: 5px;
+    position: absolute;
+}
+.next-ico-arrow-unity{
+    z-index: 100;
+    width: 60%;
+    padding-bottom: 56%;
+    height: 0;
+    position: absolute;
+    left:17%;
+}
+.next-ico-border{
+    height: 16%;
+    bottom: 7.15%;
+}
+.next-ico-arrow{
+    animation-name: arrow-mov;
+    animation-duration: 1.8s;
+    animation-iteration-count:infinite;
+    animation-timing-function:linear;
+    border-bottom: 0.25rem solid aliceblue;
+    border-right: 0.25rem solid aliceblue;
+    transform:rotate(55deg) skew(20deg);
+    bottom: 40%;
+}
+@-webkit-keyframes arrow-mov{
+    0% {transform:rotate(55deg) skew(20deg) translateY(0) translateX(0rem);opacity: 0;}
+    40% {transform:rotate(55deg) skew(20deg) translateY(40%) translateX(40%);opacity: 1;}
+    80% {transform:rotate(55deg) skew(20deg) translateY(80%) translateX(80%);opacity: 1;}
+    100% {transform:rotate(55deg) skew(20deg) translateY(80%) translateX(80%);opacity: 0;}
+}
+@keyframes arrow-mov{
+    0% {transform:rotate(55deg) skew(20deg) translateY(0) translateX(0rem);opacity: 0;}
+    40% {transform:rotate(55deg) skew(20deg) translateY(40%) translateX(40%);opacity: 1;}
+    80% {transform:rotate(55deg) skew(20deg) translateY(80%) translateX(80%);opacity: 1;}
+    100% {transform:rotate(55deg) skew(20deg) translateY(80%) translateX(80%);opacity: 0;}
+}
+/* next-icon属性与动画  结束 */
+#enter-img{
+    width: 20%;
+    height: 12%;
+    background-image: url('../src/img/enter.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: right bottom;
+    position: absolute;
+    bottom: 7.15%;
+    right: 50%;
+}
+
+.next-ico-border-pre{
+    padding-bottom: 20%;
+    height: 0;
+}
+.next-ico-arrow-pre{
+    border-top: 0.25rem solid aliceblue;
+    border-left: 0.25rem solid aliceblue;
+    transform:rotate(55deg) skew(20deg);
+    top: 35%;
+}
+#tittle-img-min{
+    background-image: url("../src/img/tittle.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: right top;
+    height: 18%;
+}
+#introduction-img{
+    width: 100%;
+    height: 60%;
+    background-image: url('../src/img/introduction·.png');
+    background-position: left bottom;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+    bottom: 7.15%;
 }
 /* 第二部分 结束 */
 
@@ -115,43 +198,3 @@ body {
 /* 第三部分 结束 */
 /* 封面各元素属性  结束*/
 
-/* next-icon属性与动画 */
-.next-ico-border{
-    width: 20%;
-    height: 16%;
-    bottom: 7.15%;
-    left: 10%;
-    position: absolute;
-    border-radius: 1000000px;
-    border-style:solid;
-    border-color: aliceblue;
-    border-width: 5px;
-}
-.next-ico-arrow{
-    animation-name: arrow-mov;
-    animation-duration: 1.8s;
-    animation-iteration-count:infinite;
-    animation-timing-function:linear;
-    width: 60%;
-    padding-bottom: 56%;
-    height: 0;
-    border-bottom: 5px solid aliceblue;
-    border-right: 5px solid aliceblue;
-    transform:rotate(55deg) skew(20deg);
-    bottom: 40%;
-    left:17%;
-    position: absolute;
-}
-@-webkit-keyframes arrow-mov{
-    0% {transform:rotate(55deg) skew(20deg) translateY(0) translateX(0rem);opacity: 0;}
-    40% {transform:rotate(55deg) skew(20deg) translateY(40%) translateX(40%);opacity: 1;}
-    80% {transform:rotate(55deg) skew(20deg) translateY(80%) translateX(80%);opacity: 1;}
-    100% {transform:rotate(55deg) skew(20deg) translateY(80%) translateX(80%);opacity: 0;}
-}
-@keyframes arrow-mov{
-    0% {transform:rotate(55deg) skew(20deg) translateY(0) translateX(0rem);opacity: 0;}
-    40% {transform:rotate(55deg) skew(20deg) translateY(40%) translateX(40%);opacity: 1;}
-    80% {transform:rotate(55deg) skew(20deg) translateY(80%) translateX(80%);opacity: 1;}
-    100% {transform:rotate(55deg) skew(20deg) translateY(80%) translateX(80%);opacity: 0;}
-}
-/* next-icon属性与动画  结束 */
