--- a/css/main.css
+++ b/css/main.css
@@ -169,7 +169,7 @@ body {
 #introduction-img{
     width: 100%;
     height: 60%;
-    background-image: url('../src/img/introduction·.png');
+    background-image: url('../src/img/introduction.png');
     background-position: left bottom;
     background-repeat: no-repeat;
     background-size: contain;
