--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ body {
 }
 
 /* 封面各元素属性 */
-#cover{
+#container{
     position: absolute;
     width: 100%;
     height: 100%;
@@ -98,7 +98,7 @@ body {
     width: 20%;
     border-radius: 20rem;
     border-style:solid;
-    border-color: aliceblue;
+    border-color: #fff;
     border-width: 0.3vw;
     position: absolute;
 }
@@ -119,8 +119,8 @@ body {
     animation-duration: 1.8s;
     animation-iteration-count:infinite;
     animation-timing-function:linear;
-    border-bottom: 0.3vw solid aliceblue;
-    border-right: 0.3vw solid aliceblue;
+    border-bottom: 0.3vw solid #fff;
+    border-right: 0.3vw solid #fff;
     transform:rotate(55deg) skew(20deg);
     bottom: 40%;
 }
@@ -155,8 +155,8 @@ body {
     height: 0;
 }
 .next-ico-arrow-pre{
-    border-top: 0.3vw solid aliceblue;
-    border-left: 0.3vw solid aliceblue;
+    border-top: 0.3vw solid #fff;
+    border-left: 0.3vw solid #fff;
     transform:rotate(55deg) skew(20deg);
     top: 35%;
 }
@@ -200,3 +200,64 @@ body {
 /* 第三部分 结束 */
 /* 封面各元素属性  结束*/
 
+/* 目录页 */
+.catalog-indent{
+    position: absolute;
+    top: 46%;
+    width: 100%;
+    height: 50%;
+}
+#catalog-text-img1{
+    background-image: url("../src/img/zddw.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 27.7%;
+    height: 30%;
+}
+#catalog-text-img2{
+    background-image: url("../src/img/zbdw.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: 27.7%;
+    height: 27.5%;
+    position: absolute;
+    top: 36%;
+}
+#catalog{
+    height: 37%;
+}
+.catalog-block{
+    z-index: 100;
+    width: 36%;
+    height: 16%;
+    border-radius: 20rem;
+    background-color:#fff;
+    border-width: 0.3vw;
+    position: absolute;
+}
+#catalog-right{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    right: 10%;
+}
+#catalog-left{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 10%;
+}
+.catalog-right{
+    right: 0;
+}
+.catalog-block-left{
+    transform: translateX(45%);
+}
+.catalog-block-mid{
+    top: 28%;
+}
+.catalog-block-right{
+    top: 56%;
+    transform: translateX(-45%);
+}
+/* 目录页 结束 */
