--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,14 @@ body {
     display: block;
     margin: 0;
 }
+@keyframes fade-in{
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+@keyframes fade-out{
+    from {opacity: 1;}
+    to {opacity: 0;}
+}
 
 /* 封面各元素属性 */
 #container{
@@ -39,6 +47,7 @@ body {
 /* 第一部分（左侧） */
 #cover-part1{
     /* background-color: #dfc6c6; */
+    animation: fade-in 1s ease 0s 1 normal forwards;
     width: 25%;
     height: 100%;
     position: absolute;
@@ -81,6 +90,7 @@ body {
 /* 第二部分（中间） */
 #cover-part2{
     /* background-color: #0e973c; */
+    animation: fade-in 1s ease 0s 1 normal forwards;
     width: 50%;
     height: 100%;
     position: absolute;
@@ -183,6 +193,7 @@ body {
 /* 第三部分（右侧） */
 #cover-part3{
     /* background-color: #0013c0; */
+    animation: fade-in 1s ease 0s 1 normal forwards;
     width: 25%;
     height: 100%;
     position: absolute;
@@ -202,10 +213,11 @@ body {
 
 /* 目录页 */
 .catalog-indent{
+    
     position: absolute;
-    top: 46%;
+    top: 50%;
     width: 100%;
-    height: 50%;
+    height: 41%;
 }
 #catalog-text-img1{
     background-image: url("../src/img/zddw.png");
