--- a/css/main.css
+++ b/css/main.css
@@ -23,10 +23,6 @@ body {
     from {opacity: 0;}
     to {opacity: 1;}
 }
-@keyframes fade-out{
-    from {opacity: 1;}
-    to {opacity: 0;}
-}
 
 /* 封面各元素属性 */
 #container{
@@ -212,6 +208,30 @@ body {
 /* 封面各元素属性  结束*/
 
 /* 目录页 */
+@keyframes move-in-1{
+    from {transform: translateX(45%);}
+    to {transform: translateX(100%);}
+}
+@keyframes move-in-2{
+    from {transform: translateX(0%);}
+    to {transform: translateX(100%);}
+}
+@keyframes move-in-3{
+    from {transform: translateX(-45%);}
+    to {transform: translateX(100%);}
+}
+@keyframes move-in-4{
+    from {transform: translateX(45%);}
+    to {transform: translateX(-100%);}
+}
+@keyframes move-in-5{
+    from {transform: translateX(0%);}
+    to {transform: translateX(-100%);}
+}
+@keyframes move-in-6{
+    from {transform: translateX(-45%);}
+    to {transform: translateX(-100%);}
+}
 .catalog-indent{
     
     position: absolute;
@@ -236,6 +256,8 @@ body {
     top: 36%;
 }
 #catalog{
+    z-index: 100;
+    animation: fade-in 0.5s ease 0s 1 normal forwards;
     height: 37%;
 }
 .catalog-block{
@@ -246,6 +268,9 @@ body {
     background-color:#fff;
     border-width: 0.3vw;
     position: absolute;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: auto 37%;
 }
 #catalog-right{
     position: absolute;
@@ -271,5 +296,29 @@ body {
 .catalog-block-right{
     top: 56%;
     transform: translateX(-45%);
+}
+#introduction-text{
+    animation: move-in-1 1s ease-in 0s 1 reverse forwards;
+    background-image: url('../src/img/intro-text.png');
+}
+#competition-situation{
+    animation: move-in-2 1.2s ease-in 0s 1 reverse forwards;
+    background-image: url('../src/img/cpt-text.png');
+}
+#award{
+    animation: move-in-3 1.4s ease-in 0s 1 reverse forwards;
+    background-image: url('../src/img/awa-text.png');
+}
+#first-prize{
+    animation: move-in-4 1.4s ease-in 0s 1 reverse forwards;
+    background-image: url('../src/img/1st-text.png');
+}
+#second-prize{
+    animation: move-in-5 1.2s ease-in 0s 1 reverse forwards;
+    background-image: url('../src/img/2nd-text.png');
+}
+#third-prize{
+    animation: move-in-6 1s ease-in 0s 1 reverse forwards;
+    background-image: url('../src/img/3rd-text.png');
 }
 /* 目录页 结束 */
