--- a/css/main.css
+++ b/css/main.css
@@ -232,6 +232,11 @@ body {
     from {transform: translateX(-45%);}
     to {transform: translateX(-100%);}
 }
+.back-to-cover-indent
+{
+    left: 34%;
+    bottom: 9%;
+}
 .catalog-indent{
     
     position: absolute;
@@ -302,19 +307,19 @@ body {
     background-image: url('../src/img/intro-text.png');
 }
 #competition-situation{
-    animation: move-in-2 1.2s ease-in 0s 1 reverse forwards;
+    animation: move-in-2 1s ease-in 0s 1 reverse forwards;
     background-image: url('../src/img/cpt-text.png');
 }
 #award{
-    animation: move-in-3 1.4s ease-in 0s 1 reverse forwards;
+    animation: move-in-3 1s ease-in 0s 1 reverse forwards;
     background-image: url('../src/img/awa-text.png');
 }
 #first-prize{
-    animation: move-in-4 1.4s ease-in 0s 1 reverse forwards;
+    animation: move-in-4 1s ease-in 0s 1 reverse forwards;
     background-image: url('../src/img/1st-text.png');
 }
 #second-prize{
-    animation: move-in-5 1.2s ease-in 0s 1 reverse forwards;
+    animation: move-in-5 1s ease-in 0s 1 reverse forwards;
     background-image: url('../src/img/2nd-text.png');
 }
 #third-prize{
@@ -322,3 +327,23 @@ body {
     background-image: url('../src/img/3rd-text.png');
 }
 /* 目录页 结束 */
+
+/* 图标页 */
+.chart{
+    width: 100%;
+    height: 40%;
+    background-position: left bottom;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+    bottom: 7.15%;
+    border-style:solid;
+    border-color: #fff;
+    border-width: 0.3vw;
+}
+#cpt-chart{
+    background-image: url('../src/img/cpt-chart.png');
+}
+#awa-chart{
+    background-image: url('../src/img/awa-chart.png');
+}
