--- a/css/main.css
+++ b/css/main.css
@@ -234,8 +234,8 @@ body {
 }
 .back-to-cover-indent
 {
-    left: 34%;
-    bottom: 9%;
+    left: 35%;
+    bottom: 9.6%;
 }
 .catalog-indent{
     
@@ -331,8 +331,8 @@ body {
 /* 图标页 */
 .chart{
     width: 100%;
-    height: 40%;
-    background-position: left bottom;
+    height: 36%;
+    background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
     position: absolute;
@@ -340,6 +340,21 @@ body {
     border-style:solid;
     border-color: #fff;
     border-width: 0.3vw;
+}
+.chart-text{
+    height: 10%;
+    width: 100%;
+    background-position: left top;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+    top: 40%;
+}
+#cpt-chart-text{
+    background-image: url('../src/img/cpt-chart-text.png');
+}
+#awa-chart-text{
+    background-image: url('../src/img/awa-chart-text.png');
 }
 #cpt-chart{
     background-image: url('../src/img/cpt-chart.png');
