--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,6 @@ html, body {
     -moz-user-select: one;
     -webkit-user-select: none;
     user-select: none;
-    /*font-family: FZQINGKEYUESONG_GB;*/
     font-size: 20px;
     height: 100%;
     overflow: auto;
@@ -19,6 +18,7 @@ body {
     display: block;
     margin: 0;
 }
+::-webkit-scrollbar{display:none;}
 @keyframes fade-in{
     from {opacity: 0;}
     to {opacity: 1;}
@@ -331,15 +331,11 @@ body {
 /* 图标页 */
 .chart{
     width: 100%;
-    height: 36%;
+    height: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
-    position: absolute;
-    bottom: 7.15%;
-    border-style:solid;
-    border-color: #fff;
-    border-width: 0.3vw;
+    display: block;
 }
 .chart-text{
     height: 10%;
@@ -361,4 +357,18 @@ body {
 }
 #awa-chart{
     background-image: url('../src/img/awa-chart.png');
+}
+#map-chart{
+    background-image: url('../src/img/map-chart.png');
+}
+#chart-show{
+    border-style:solid;
+    border-color: #fff;
+    border-width: 0.3vw;
+    width: 100%;
+    height: 36%;
+    position: absolute;
+    bottom: 7.15%;
+    white-space: nowrap;
+    overflow-y: auto;
 }
