--- a/css/main.css
+++ b/css/main.css
@@ -19,19 +19,12 @@ body {
     margin: 0;
 }
 ::-webkit-scrollbar{display:none;}
-@keyframes fade-in-1{
+@keyframes fade-in{
     from {opacity: 0;}
     to {opacity: 1;}
 }
-.fade-in-1{
-    animation: fade-in-1 1s ease 0s 1 normal forwards;
-}
-@keyframes fade-in-2{
-    from {opacity: 0;}
-    to {opacity: 1;}
-}
-.fade-in-2{
-    animation: fade-in-1 1s ease 0s 1 normal forwards;
+.fade-in{
+    animation: fade-in 1s ease 0s 1 normal forwards;
 }
 
 /* 封面各元素属性 */
