--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+* {
+    margin:0;
+    padding:0;
+}
 html, body {
     -moz-user-select: one;
     -webkit-user-select: none;
@@ -335,7 +339,7 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
-    display: block;
+    display: inline-block;
 }
 .chart-text{
     height: 10%;
@@ -384,7 +388,9 @@ body {
     position: absolute;
     bottom: 7.15%;
     white-space: nowrap;
-    overflow-y: auto;
+    overflow-y: hidden;
+    overflow-x: auto;
+    direction: rtl;
 }
 /* 图表页结束 */
 
@@ -469,6 +475,9 @@ body {
 }
 #awa-1st-1{
     background-image: url('../src/img1/1st/1st-1.png');
+}
+#awa-1st-1-90{
+    background-image: url('../src/img1/1st/-90/1st-1.png');
 }
 #awa-1st-2{
     background-image: url('../src/img1/1st/1st-2.png');
@@ -556,4 +565,212 @@ body {
 }
 #awa-3rd-10{
     background-image: url('../src/img1/3rd/3rd-10.png');
+}
+
+/* 作品详情页 */
+#back-2-1st-border{
+    z-index: 100;
+    width: 40%;
+    padding-bottom: 40%;
+    height: 0;
+    border-radius: 20rem;
+    border-style:solid;
+    border-color: #fff;
+    border-width: 0.3vw;
+    position: absolute;
+    right: 15%;
+    bottom: 7.15%;
+}
+#back-2-1st-arrow{
+    z-index: 100;
+    width: 60%;
+    padding-bottom: 56%;
+    height: 0;
+    position: absolute;
+    left: 17%;
+    border-top: 0.3vw solid #fff;
+    border-left: 0.3vw solid #fff;
+    transform: rotate(55deg) skew(20deg);
+    top: 35%;
+}
+.slide-ud-ico2{
+    width: 20%;
+    height: 7%;
+    left: 2%;
+    position: absolute;
+    background-image: url('../src/img1/slid-ud.png');
+    background-position: left bottom;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+.tittle-img-min2{
+    width: 52%;
+    height: 20%;
+    background-image: url('../src/img/tittle.png');
+    background-position: left bottom;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+    bottom: 38.5%;
+    right: 10%;
+}
+#cover-part1-part2{
+    width: 80%;
+    height: 100%;
+    position: absolute;
+}
+.works-head{
+    width: 100%;
+    height: 8%;
+    box-sizing: border-box;
+    border-style:solid;
+    border-color: #fff;
+    border-width: 0.3vw;
+}
+.works-body{
+    width: 100%;
+    height: 75.85%;
+    white-space: nowrap;
+    overflow-y: hidden;
+    overflow-x: auto;
+    direction: rtl;
+    backdrop-filter: blur(25px);
+    box-sizing: border-box;
+    border-right:0.3vw solid #fff;
+    border-bottom:0.3vw solid #fff;
+}
+.works-inform{
+    width: 60%;
+    height: 6%;
+    background-position: right top;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+    top: 1%;
+    right: 5%;
+}
+.works-content{
+    height: 100%;
+    display: inline-block;
+    margin-right: -1%;
+    border-left:0.3vw solid #fff;
+    vertical-align:top;
+    padding-left: 8vw;
+    background-position: center;
+    background-repeat: repeat;
+    background-size: auto 100%;
+    width: auto;
+    min-width: 90%;
+}
+#awa-1st-1-content{
+    background-image: url('../src/img1/1st/A-1-A-0539/202110231618080740.jpg');
+}
+.awa-content-line{
+    width: 60vw;
+    height: 80vh;
+    display: inline-block;
+    margin-top: 5%;
+    margin-right: 8vw;
+}
+.awa-content-img{
+    width: 100%;
+    height: 25%;
+    margin-top: 10%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    box-shadow: 0px 1px 4px rgba(0,0,0,0.3),0px 0px 50px #ddd inset;
+}
+#awa-1st-1-content1{
+    background-image: url('../src/img1/1st/A-1-A-0539/202110231618080740_5.jpg'); 
+}
+#awa-1st-1-content2{
+    background-image: url('../src/img1/1st/A-1-A-0539/202110231618060289_2.jpg'); 
+}
+#awa-1st-1-content3{
+    background-image: url('../src/img1/1st/A-1-A-0539/202110231618070100_3.jpg'); 
+}
+#awa-1st-1-content4{
+    background-image: url('../src/img1/1st/A-1-A-0539/202110231618060025_4.jpg'); 
+}
+#awa-1st-1-content5{
+    background-image: url('../src/img1/1st/A-1-A-0539/202110231618050750_1.jpg'); 
+}
+#awa-1st-1-content6{
+    background-image: url('../src/img1/1st/A-1-A-0539/202110231618060693_6.jpg'); 
+}
+
+#awa-1st-2-content{
+    background-image: url('../src/img1/1st/A-1-B-1002/202110111526080991.jpg');
+}
+#awa-1st-2-content1{
+    background-image: url('../src/img1/1st/A-1-B-1002/202110111526080713_1.jpg'); 
+}
+#awa-1st-2-content2{
+    background-image: url('../src/img1/1st/A-1-B-1002/202110111526080991_2.jpg'); 
+}
+#awa-1st-2-content3{
+    background-image: url('../src/img1/1st/A-1-B-1002/202110111526090025_3.jpg'); 
+}
+
+#awa-1st-3-content{
+    background-image: url('../src/img1/1st/A-1-B-1755/202111151628210911.jpg');
+}
+#awa-1st-3-content1{
+    background-image: url('../src/img1/1st/A-1-B-1755/202111151628210181_1.jpg'); 
+}
+#awa-1st-3-content2{
+    background-image: url('../src/img1/1st/A-1-B-1755/202111151628210911_2.jpg'); 
+}
+#awa-1st-3-content3{
+    background-image: url('../src/img1/1st/A-1-B-1755/202111151628220698_3.jpg'); 
+}
+
+#awa-1st-4-content{
+    background-image: url('../src/img1/1st/A-1-E-0383/202110302154450944.jpg');
+}
+#awa-1st-4-content1{
+    background-image: url('../src/img1/1st/A-1-E-0383/202110302154420660_1.jpg'); 
+}
+#awa-1st-4-content2{
+    background-image: url('../src/img1/1st/A-1-E-0383/202110302154450944_2.jpg'); 
+}
+#awa-1st-4-content3{
+    background-image: url('../src/img1/1st/A-1-E-0383/202110302154520011_3.jpg'); 
+}
+
+#awa-1st-5-content{
+    background-image: url('../src/img1/1st/A-1-G-0575/202110291000240043.jpg');
+}
+#awa-1st-5-content1{
+    background-image: url('../src/img1/1st/A-1-G-0575/202110291000230433_1.jpg'); 
+}
+#awa-1st-5-content2{
+    background-image: url('../src/img1/1st/A-1-G-0575/202110291000240043_2.jpg'); 
+}
+#awa-1st-5-content3{
+    background-image: url('../src/img1/1st/A-1-G-0575/202110291000250237_3.jpg'); 
+}
+
+#awa-1st-9-content{
+    background-image: url('../src/img1/1st/B-1-F-0072/202110082314180598.jpg');
+}
+#awa-1st-9-content1{
+    background-image: url('../src/img1/1st/B-1-F-0072/202110082314150731_1.jpg'); 
+}
+#awa-1st-9-content2{
+    background-image: url('../src/img1/1st/B-1-F-0072/202110082314180598_2.jpg'); 
+}
+
+#awa-1st-10-content{
+    background-image: url('../src/img1/1st/C-1-B-0320/202110191133470295.jpg');
+}
+#awa-1st-10-content1{
+    background-image: url('../src/img1/1st/C-1-B-0320/202110191133470199_1.jpg'); 
+}
+#awa-1st-10-content2{
+    background-image: url('../src/img1/1st/C-1-B-0320/202110191133470295_2.jpg'); 
+}
+#awa-1st-10-content3{
+    background-image: url('../src/img1/1st/C-1-B-0320/202110191133470463_3.jpg'); 
 }
