--- a/css/main.css
+++ b/css/main.css
@@ -482,11 +482,23 @@ body {
 #awa-1st-2{
     background-image: url('../src/img1/1st/1st-2.png');
 }
+#awa-1st-2-90{
+    background-image: url('../src/img1/1st/-90/1st-2.png');
+}
+#awa-1st-3-90{
+    background-image: url('../src/img1/1st/-90/1st-3.png');
+}
 #awa-1st-3{
     background-image: url('../src/img1/1st/1st-3.png');
 }
+#awa-1st-4-90{
+    background-image: url('../src/img1/1st/-90/1st-4.png');
+}
 #awa-1st-4{
     background-image: url('../src/img1/1st/1st-4.png');
+}
+#awa-1st-5-90{
+    background-image: url('../src/img1/1st/-90/1st-5.png');
 }
 #awa-1st-5{
     background-image: url('../src/img1/1st/1st-5.png');
@@ -494,17 +506,32 @@ body {
 #awa-1st-6{
     background-image: url('../src/img1/1st/1st-6.png');
 }
+#awa-1st-6-90{
+    background-image: url('../src/img1/1st/-90/1st-6.png');
+}
 #awa-1st-7{
     background-image: url('../src/img1/1st/1st-7.png');
+}
+#awa-1st-7-90{
+    background-image: url('../src/img1/1st/-90/1st-7.png');
 }
 #awa-1st-8{
     background-image: url('../src/img1/1st/1st-8.png');
 }
+#awa-1st-8-90{
+    background-image: url('../src/img1/1st/-90/1st-8.png');
+}
 #awa-1st-9{
     background-image: url('../src/img1/1st/1st-9.png');
 }
+#awa-1st-9-90{
+    background-image: url('../src/img1/1st/-90/1st-9.png');
+}
 #awa-1st-10{
     background-image: url('../src/img1/1st/1st-10.png');
+}
+#awa-1st-10-90{
+    background-image: url('../src/img1/1st/-90/1st-10.png');
 }
 #awa-2nd-1{
     background-image: url('../src/img1/2nd/2nd-1.png');
@@ -681,6 +708,14 @@ body {
     background-size: contain;
     box-shadow: 0px 1px 4px rgba(0,0,0,0.3),0px 0px 50px #ddd inset;
 }
+.awa-content-text{
+    width: 100%;
+    height: 60%;
+    margin-top: 40%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
 #awa-1st-1-content1{
     background-image: url('../src/img1/1st/A-1-A-0539/202110231618080740_5.jpg'); 
 }
@@ -750,6 +785,28 @@ body {
 }
 #awa-1st-5-content3{
     background-image: url('../src/img1/1st/A-1-G-0575/202110291000250237_3.jpg'); 
+}
+
+#awa-1st-6-content1{
+    background-image: url('../src/img1/1st/A-2-B-0270/202110162206450545.png'); 
+
+}
+
+#awa-1st-7-content{
+    background-image: url('../src/img1/1st/A-4-E-0018/202108081747510955.jpg');
+}
+
+#awa-1st-8-content{
+    background-image: url('../src/img1/1st/A-6-A-0010/202109281524320715.jpg');
+}
+#awa-1st-8-content1{
+    background-image: url('../src/img1/1st/A-6-A-0010/202109281524320715_1.jpg'); 
+}
+#awa-1st-8-content2{
+    background-image: url('../src/img1/1st/A-6-A-0010/202109281524320715_2.jpg'); 
+}
+#awa-1st-8-content3{
+    background-image: url('../src/img1/1st/A-6-A-0010/202109281524320715_3.jpg'); 
 }
 
 #awa-1st-9-content{
