--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,33 @@ body {
 .fade-in{
     animation: fade-in 1s ease 0s 1 normal forwards;
 }
-
+.fade-out{
+    animation: fade-in 1s ease 0s 1 normal backwards;
+}
+/* 加载遮罩 */
+#load{
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+}
+#load-end{
+    display: none;
+}
+#load >div{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 10rem;
+    height: 20rem;
+    margin-top: -10rem;
+    margin-left: -5rem;
+    background-color: #fff;
+    background-image: url('../src/img/label.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    animation: fade-in 1s ease 0s infinite alternate-reverse forwards;
+}
 /* 封面各元素属性 */
 #container{
     position: absolute;
