--- a/css/main.css
+++ b/css/main.css
@@ -290,6 +290,24 @@ body {
     position: absolute;
     top: 36%;
 }
+#tip{
+    width: 25%;
+    height: 43%;
+    position: absolute;
+    left: 75%;
+    visibility: hidden;
+}
+#tip div{
+    position: absolute;
+    bottom: 0%;
+    left: 2%;
+    width: 30%;
+    height: 30%;
+    background-image: url('../src/img/tip.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
 #catalog{
     z-index: 100;
     animation: fade-in 0.5s ease 0s 1 normal forwards;
